--- a/style.css
+++ b/style.css
@@ -94,6 +94,10 @@ span{
   color: gray;
 }
 
+.header-name h3{
+  color: purple;
+}
+
 .home-content button {
   width: 190px;
   height: 65px;
@@ -106,6 +110,10 @@ span{
   margin-top: 10%;
 }
 
+.home-content button:hover{
+  background-color: rgb(52, 49, 49);
+}
+
 .home-content button i {
   margin-left: 5%;
 }
@@ -114,7 +122,16 @@ span{
   width: 350px;
   margin-top: 65%;
   border-radius: 200px;
+  transition: box-shadow 0.5s ease-in-out;
+  cursor: pointer;
 }
+
+
+
+.home-image img:hover {
+  box-shadow: 0 0 50px purple;
+}
+
 
 /* About Section */
 .about-container {
@@ -171,7 +188,14 @@ span{
   width: 350px;
   border-radius: 15px;
   margin-top: 45%;
-  
+  transition: box-shadow 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+
+
+.about-photo img:hover {
+box-shadow: 0 0 35px purple;
 }
 
 
@@ -343,7 +367,7 @@ p {
 .project-container {
   min-height: 100vh;
   padding: 20px;
-  padding-top: 8%;
+  padding-top: 5%;
   display: flex;
   flex-direction: column;
   align-items: center; /* Center align the container content */
@@ -369,8 +393,10 @@ p {
   padding: 30px; /* Reduced padding for a cleaner look */
   text-align: center;
   margin-right: 5%;
+  cursor: pointer;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
 
 .project-content:hover {
   transform: translateY(-5px);
@@ -404,7 +430,7 @@ p {
 
 .btn a {
   text-decoration: none;
-  background-color: #6c5ce7;
+  background-color: black;
   color: #fff;
   padding: 10px 20px;
   border-radius: 8px;
@@ -413,7 +439,7 @@ p {
 }
 
 .btn a:hover {
-  background-color: #5a4ae0;
+  background-color: gray;
 }
 
 
@@ -551,8 +577,8 @@ flex-direction: column;
 
   .navbar-div {
     flex-direction: row;
-    gap: 20px;
-    margin-right: 4%;
+    gap: 15px;
+    margin-right: 8%;
   }
 
   .home-container {
