--- a/style.css
+++ b/style.css
@@ -454,7 +454,7 @@ p {
   justify-content: space-between;
   align-items: center;
   padding: 130px;
-  gap: 30px;
+  gap: 20px;
 }
 
 .logo-content {
@@ -495,14 +495,14 @@ p {
 }
 
 .text-box, textarea {
-  width: 90%;
+  width: 280px;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
 
 textarea {
-  resize: none;
+  
   height: 100px;
 }
 
